Fix portfolio grid spacing

--- a/app/_sass/_portfolio.sass
+++ b/app/_sass/_portfolio.sass
@@ -4,17 +4,19 @@
   width: 100%
   margin: 0
   overflow: hidden
+  font-size: 0
   background: $cplain
 
   .portfolio-title, figure
     position: relative
     z-index: 1
     display: inline-block
-    overflow: hidden
-    margin: -0.135em
-    width: 20%
-    padding-bottom: 20%
     height: 0
+    width: 20%
+    margin: 0
+    padding-bottom: 20%
+    overflow: hidden
+    font-size: 16px
     text-align: center
 
   .portfolio-title
